Add `repository` field to `package.json`.
Without this we get a warning on every `npm install` when working on
Ember CLI.

--- a/package.json
+++ b/package.json
@@ -8,5 +8,6 @@
   },
   "author": "stefanpenner <stefan.penner@gmail.com>",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {},
+  "repository": "https://github.com/stefanpenner/node-require-timings"
 }
